Fixed the wrong colour links in menu

--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ body {
     padding: 10px;
 }
 
-.menu a {
+.menu a.menu-link {
     color: white;
     text-decoration: none;
     font-family: sans-serif;
@@ -105,7 +105,7 @@ body {
 
 /*Other*/
 
-a{
+a:not(.menu-link){
     background: -webkit-linear-gradient(90deg, 
     rgba(149, 0, 255, 1) 0%, rgba(149, 0, 255, 1) 13%,
     rgba(0, 0, 255, 1) 14%, rgba(0, 0, 255, 1) 28%,
